# 02476Exercise

./: .pre-commit-config.yaml  404.html  README.md  cloudbuild.yaml  config_cpu.yaml  data.dvc  index.html  main.py  model.pth  objects.inv  profile.prof  pyproject.toml  requirements.txt  requirements_dev.txt  simple_fastapi_app.dockerfile  simple_fastapi_app.py  tasks.py  trainer.dockerfile  vertex_ai_train.yaml  wandb.dockerfile
.dvc/: config
.github/workflows/: cml_data.yaml  deploy_docs.yaml  stage_model.yaml  tests.yaml
configs/: config.yaml  sweep.yaml
configs/model/: model_conf.yaml
configs/training/: training_conf.yaml
data/: index.html
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: data.md  index.md
models/: model.pth
outputs/2025-01-07/12-26-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-07/12-40-31/.hydra/: hydra.yaml
search/: search_index.json
src/exercise/: api.py  bentoml_client.py  bentoml_service.py  data.py  data_drift.py  data_drift_mnist.py  dataset.py  evaluate.py  frontend.py  iris_fastapi.py  link_model.py  load_from_wandb.py  model.py  model_lightning.py  my_logger.py  onnx_fastapi.py  onnx_output.py  onnx_test.py  sentiment_api.py  sentiment_client.py  sentiment_monitoring.py  sklearn_cloud_functions.py  train.py  train_lightning.py  utils.py  visualize.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py  test_model.py  test_model_performance.py
tests/unittests/: test_data.py  test_model.py
(+73 files in other folders)
